force-app/main/default/objects/CFA_Fitness_Product__c/CFA_Fitness_Product__c.object-meta.xml
<CustomObject>
    <label>CFA Fitness Product</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CFA Fitness Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 