force-app/main/default/objects/CFA_Fitness_Product__c/fields/Annual_Subscriber_Discount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subscriber_Discount__c</fullName>
    <description>Discount percentage for annual subscribers</description>
    <label>Annual Subscriber Discount (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 