force-app/main/default/objects/CFA_Fitness_Product__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Date when this fitness product was created</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField> 