force-app/main/default/objects/CFA_Fitness_Product__c/fields/Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Dimensions__c</fullName>
    <description>Product dimensions (L x W x H)</description>
    <label>Dimensions</label>
    <length>100</length>
    <type>Text</type>
</CustomField> 