force-app/main/default/objects/CFA_Fitness_Product__c/fields/Inventory_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Quantity__c</fullName>
    <description>Current inventory quantity for this product</description>
    <label>Inventory Quantity</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 