force-app/main/default/objects/CFA_Fitness_Product__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this fitness product is active and available for sale</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField> 