force-app/main/default/objects/CFA_Fitness_Product__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>Stock Keeping Unit for inventory management</description>
    <label>SKU</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 