force-app/main/default/objects/CFA_Fitness_Product__c/fields/Stripe_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_ID__c</fullName>
    <description>External ID from Stripe for this fitness product</description>
    <externalId>true</externalId>
    <label>Stripe Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 