force-app/main/default/objects/CFA_Fitness_Product__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of the product in pounds</description>
    <label>Weight (lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField> 